--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
 android {
-    signingConfigs {
-        Developer {
-            keyAlias 'androidKey'
-            keyPassword '1234567d'
-            storeFile file('/temp/android.keystore')
-            storePassword '1234567d'
-        }
-    }
+
     compileSdkVersion 23
     buildToolsVersion "24.0.2"
     defaultConfig {
@@ -24,9 +17,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-        debug {
-            signingConfig signingConfigs.Developer
-        }
     }
 }
 
@@ -36,6 +26,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.android.gms:play-services:9.4.0'
 
+    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.google.code.gson:gson:2.4'
 
     compile 'com.google.firebase:firebase-core:9.4.0'
     compile 'com.google.firebase:firebase-database:9.4.0'
