--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             </intent-filter>
         </activity>
 
-        <!--<meta-data
+        <!--
+        <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
@@ -34,17 +35,19 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-    -->
+        -->
         <activity
             android:name=".util.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".activities.MapActivity" />
+        <activity android:name=".activities.CadastroActivity" />
+        <activity android:name=".activities.MainActivity" />
 
-        <activity android:name=".activities.CadastroActivity"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity android:name=".UsuarioActivity"></activity>
     </application>
 
 </manifest>
