--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".activities.UsuarioActivity"></activity>
+        <activity android:name=".activities.UsuarioActivity" />
+        <activity android:name=".activities.FuncionarioActivity"></activity>
     </application>
 
 </manifest>
